fixed Alignment and youtube full screen bug

--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -22,7 +22,7 @@
   font-weight: 400 !important;
   line-height: 1.5 !important;
   font-size: 14px !important;
-  padding: 10px 16px 0 16px !important;
+  padding: 5px 16px !important;
   color: #030303 !important;
   justify-content: space-between !important;
 }
@@ -44,7 +44,7 @@
   display: none;
   position: absolute;
   z-index: 1;
-  transform: translateX(230px) translateY(-30px);
+  transform: translateX(230px) translateY(-35px);
 }
 
 .sub-dropdown:hover .sub-dropdown-content {
